@@ -295,6 +295,8 @@ class Page(six.with_metaclass(PageBase, AbstractPage, index.Indexed, Clusterable
         blank=True,
         help_text=_("Optional. 'Search Engine Friendly' title. This will appear at the top of the browser window.")
     )
+
+    show_in_menus_default = False
     show_in_menus = models.BooleanField(
         verbose_name=_('show in menus'),
         default=False,
@@ -367,11 +369,16 @@ class Page(six.with_metaclass(PageBase, AbstractPage, index.Indexed, Clusterable
 
     def __init__(self, *args, **kwargs):
         super(Page, self).__init__(*args, **kwargs)
-        if not self.id and not self.content_type_id:
-            # this model is being newly created rather than retrieved from the db;
-            # set content type to correctly represent the model class that this was
-            # created as
-            self.content_type = ContentType.objects.get_for_model(self)
+        if not self.id:
+            # this model is being newly created
+            # rather than retrieved from the db;
+            if not self.content_type_id:
+                # set content type to correctly represent the model class
+                # that this was created as
+                self.content_type = ContentType.objects.get_for_model(self)
+            if 'show_in_menus' not in kwargs:
+                # if the value is not set on submit refer to the model setting
+                self.show_in_menus = self.show_in_menus_default
 
     def __str__(self):
         return self.title
