@@ -16,10 +16,11 @@ from django.test.utils import override_settings
 from freezegun import freeze_time
 
 from wagtail.tests.testapp.models import (
-    AbstractPage, Advert, BlogCategory, BlogCategoryBlogPage, BusinessChild, BusinessIndex,
-    BusinessNowherePage, BusinessSubIndex, CustomManager, CustomManagerPage, EventIndex, EventPage,
-    GenericSnippetPage, ManyToManyBlogPage, MTIBasePage, MTIChildPage, MyCustomPage, OneToOnePage,
-    SimplePage, SingleEventPage, SingletonPage, StandardIndex, TaggedPage)
+    AbstractPage, Advert, AlwaysShowInMenusPage, BlogCategory, BlogCategoryBlogPage, BusinessChild,
+    BusinessIndex, BusinessNowherePage, BusinessSubIndex, CustomManager, CustomManagerPage,
+    EventIndex, EventPage, GenericSnippetPage, ManyToManyBlogPage, MTIBasePage, MTIChildPage,
+    MyCustomPage, OneToOnePage, SimplePage, SingleEventPage, SingletonPage, StandardIndex,
+    TaggedPage)
 from wagtail.tests.utils import WagtailTestUtils
 from wagtail.wagtailcore.models import Page, PageManager, Site, get_page_models
 
@@ -1349,3 +1350,26 @@ class TestDummyRequest(TestCase):
 
         # '*' is not a valid hostname, so ensure that we replace it with something sensible
         self.assertNotEqual(request.META['HTTP_HOST'], '*')
+
+
+class TestShowInMenusDefaultOption(TestCase):
+    """
+    This tests that a page model can define the default for 'show_in_menus'
+    """
+    fixtures = ['test.json']
+
+    def test_show_in_menus_default(self):
+        # Create a page that does not have the default init
+        page = Page(
+            title='My Awesome Page', slug='my-awesome-page')
+
+        # Check that the page instance creates with show_in_menu as False
+        self.assertFalse(page.show_in_menus)
+
+    def test_show_in_menus_default_override(self):
+        # Create a page that does have the default init
+        page = AlwaysShowInMenusPage(
+            title='My Awesome Page', slug='my-awesome-page')
+
+        # Check that the page instance creates with show_in_menu as True
+        self.assertTrue(page.show_in_menus)
