@@ -9,7 +9,8 @@ Changelog
  * The current live version of a page is now tracked on the revision listing view (Matheus Bratfisch)
  * Each block created in a `StreamField` is now assigned a globally unique identifier (Matt Westcott)
  * Mixcloud oEmbed pattern has been updated (Alice Rose)
- * Added ``last_published_at`` field to the Page model (Matt Westcott)
+ * Added `last_published_at` field to the Page model (Matt Westcott)
+ * Added `show_in_menus_default` flag on page models, to allow "show in menus" to be checked by default (LB (Ben Johnston))
  * Fix: Unauthenticated AJAX requests to admin views now return 403 rather than redirecting to the login page (Karl Hobley)
  * Fix: `TableBlock` options `afterChange`, `afterCreateCol`, `afterCreateRow`, `afterRemoveCol`, `afterRemoveRow` and `contextMenu` can now be overridden (Loic Teixeira)
  * Fix: The lastmod field returned by wagtailsitemaps now shows the last published date rather than the date of the last draft edit (Matt Westcott)
